welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value NbPas
					nbPas=NbPas+1}
                                              ^